Add jvmArgs hint for simulator
Signed-off-by: utzcoz <utzcoz@outlook.com>
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>